// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`io-pagination — render snapshots > renders default state 1`] = `
<io-pagination page="1" total-pages="1" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <span aria-live="polite" aria-atomic="true" class="sr-only"></span>
    <nav aria-label="Pagination" id="io-pagination-4fzzzxjylrx">
      <div class="pagination">
        <button type="button" class="page-btn page-btn--nav" aria-label="Previous page" disabled>
          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="18" height="18" aria-hidden="true">
            <path d="m15 18-6-6 6-6"></path>
          </svg>
        </button>
        <button type="button" class="page-btn page-btn--active" aria-label="Page 1" aria-current="page">
          1
        </button>
        <button type="button" class="page-btn page-btn--nav" aria-label="Next page" disabled>
          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="18" height="18" aria-hidden="true">
            <path d="m9 18 6-6-6-6"></path>
          </svg>
        </button>
      </div>
    </nav>
  </mock:shadow-root>
</io-pagination>
`;

exports[`io-pagination — render snapshots > renders mid-range pagination 1`] = `
<io-pagination page="5" total-pages="12" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <span aria-live="polite" aria-atomic="true" class="sr-only"></span>
    <nav aria-label="Pagination" id="io-pagination-4fzzzxjylrx">
      <div class="pagination">
        <button type="button" class="page-btn page-btn--nav" aria-label="Previous page">
          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="18" height="18" aria-hidden="true">
            <path d="m15 18-6-6 6-6"></path>
          </svg>
        </button>
        <button type="button" class="page-btn page-btn--number" aria-label="Page 1">
          1
        </button>
        <span class="page-dots" aria-hidden="true">
          …
        </span>
        <button type="button" class="page-btn page-btn--number" aria-label="Page 4">
          4
        </button>
        <button type="button" class="page-btn page-btn--active" aria-label="Page 5" aria-current="page">
          5
        </button>
        <button type="button" class="page-btn page-btn--number" aria-label="Page 6">
          6
        </button>
        <span class="page-dots" aria-hidden="true">
          …
        </span>
        <button type="button" class="page-btn page-btn--nav" aria-label="Next page">
          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="18" height="18" aria-hidden="true">
            <path d="m9 18 6-6-6-6"></path>
          </svg>
        </button>
      </div>
    </nav>
  </mock:shadow-root>
</io-pagination>
`;
